# reki-cli

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  agent.py  betting_ledger.json  config.yaml  gemini.md  main.py  mock_candle_model.py  pyproject.toml  reki.json  repro_save.py  run_dev.py  run_scheduler_dev.py  stats.json  stats.txt  system_prompt.txt  test_currency_conversion.py  trading_config.yaml  trading_scheduler.py  verify_candle_tool.py  verify_scheduler.py  vm.xml
helpers/: mem0_config.py  mem0_helper.py
mt5_service/: .env.example  DEPLOY_INSTRUCTIONS.md  README.md  check_symbols.py  main.py  requirements.txt  start_service.ps1
reki/: agent.md  agent.py  config.py  help.txt  main.py  memory.txt  system_prompt.txt  trading_system_prompt.txt  ui.py
terminal2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_daily_market.py  test_minute_aggregates.py
tools/: binance_tool.py  brave_search.py  candle_model_tool.py  currency_conversion_tool.py  daily_market_tool.py  execution_agent_tool.py  fx_converter.py  fx_ema_indicator.py  fx_macd_indicator.py  fx_market_status.py  fx_market_summary.py  fx_rsi_indicator.py  fx_sma_indicator.py  google_finance_tool.py  minute_aggregates_tool.py  mt5_check_positions.py  mt5_execute_trade.py  web_fetcher.py
trading_logs/: analyst_prompt.txt  analyze_all_logs.py  analyze_logs.py  analyze_logs.py.backup  history_2025-11-30_21-43-16.json  history_2025-12-01_00-17-06.json  history_2025-12-01_00-23-31.json  history_2025-12-01_02-00-59.json  history_2025-12-01_02-27-24.json  (+45 more)
(+15 files in other folders)
