[project]
name = "terminal2"
version = "0.1.0"
description = "A CLI based trading AI-agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "openai",
    "python-dotenv",
    "tiktoken",
    "requests",
    "scikit-learn",
    "watchdog",
    "beautifulsoup4",
    "lxml",
    "fastapi",
    "uvicorn",
    "websocket-client",
    "massive",
]
